--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ DB_PORT=3306
 DB_DATABASE=new_dev_fetishonly
 DB_USERNAME=new_dev_fetishonly
 DB_PASSWORD=JufFYzoEDbDZQNTp
-DEFAULT_FILESYSTEM=s3
+DEFAULT_FILESYSTEM=public
 AWS_KEY=NNQ1JGZ3ZAXU61BYXX6S
 AWS_SECRET=hmSQAYErpwMBFZHEpgOOZ85deWPttQnUCF9ck8Bl
 AWS_URL=https://us-north-1.mojocloud.com
