--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ AWS_SECRET=hmSQAYErpwMBFZHEpgOOZ85deWPttQnUCF9ck8Bl
 AWS_URL=https://us-north-1.mojocloud.com
 AWS_ENDPOINT=https://us-north-1.mojocloud.com
 AWS_REGION=us-east-1
+AWS_BUCKET=us-east-1
