--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -17,8 +17,8 @@ jobs:
       run: sudo apt-get install -y sshpass
 
 
-    - name: Install knock
-      run: sudo apt-get install -y knock
+    - name: Install knockd
+      run: sudo apt-get install -y knockd
 
     - name: Send port-knocking sequence
       run: knock -v srv5299.mjhst.com 6335 3278 7524
